# tree-sitter-gon

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGon/: gon.h
bindings/swift/TreeSitterGonTests/: TreeSitterGonTests.swift
examples/: basic.gon  objectless.gon  objects.gon  weekdays.gon
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
