[package]
name = "tree-sitter-gon"
description = "A tree-sitter parser for Glaiel Object Notation"
version = "0.1.0"
authors = ["IntangibleMatter"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gon"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/intangiblematter/tree-sitter-gon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
